# termide

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README.ru.md  README.zh.md  SECURITY.md  default.nix  deny.toml  flake.nix  install.sh
crates/app/: Cargo.toml
crates/app/src/: layout_session.rs  lib.rs  panel_ext.rs  state.rs
crates/app/src/app/: background_ops.rs  event_handler.rs  file_transfer_ops.rs  global_hotkeys.rs  hotkey.rs  key_handler.rs  local_ops.rs  menu_actions.rs  mod.rs  modal_handler.rs  mouse_handler.rs  operation_manager_handler.rs  panel_factory.rs  panel_manager.rs  panel_operations.rs  session.rs  watcher.rs  workspace_edit.rs
crates/app/src/app/menu_actions/: bookmarks.rs  command_palette.rs  commands.rs  mod.rs  operation_action.rs  outline.rs  panel_action.rs  scripts.rs  sessions.rs  settings.rs  stash.rs  tools.rs
crates/app/src/app/modal/: batch_handler.rs  bookmark_handler.rs  command_handler.rs  command_palette_handler.rs  confirm_handler.rs  git_handler.rs  input_handler.rs  mod.rs  path_handler.rs  progress_handler.rs  script_handler.rs  search_handler.rs  select_handler.rs
crates/config/: Cargo.toml
crates/config/src/: actions.rs  bookmarks.rs  commands.rs  conflicts.rs  constants.rs  diff.rs  keybindings.rs  lib.rs  scripts.rs  settings.rs  xdg.rs
crates/config/tests/: layered.rs
crates/db/: Cargo.toml
crates/db/src/: engine.rs  error.rs  lib.rs  value.rs
crates/db/tests/: live_engines.rs
crates/fetch/: Cargo.toml
crates/fetch/src/: lib.rs
crates/file-ops/: Cargo.toml
crates/file-ops/src/: lib.rs  manager.rs  queue.rs  retry.rs  types.rs  worker.rs
crates/file-ops/src/worker/: conflict.rs  cross_protocol.rs  download.rs  local.rs  mod.rs  remote_delete.rs  upload.rs
crates/git/: Cargo.toml
crates/git/src/: command.rs  commits.rs  diff.rs  files.rs  graph.rs  lib.rs  operations.rs  repo_manager.rs  stash.rs  utils.rs
crates/html/: Cargo.toml
crates/html/src/: lib.rs
crates/layout/: Cargo.toml
crates/layout/src/: layout_manager.rs  lib.rs  panel_group.rs
crates/modal/: Cargo.toml
crates/modal/src/: base.rs  bookmark_add.rs  calendar.rs  choice.rs  command_config.rs  command_palette.rs  command_params.rs  commit.rs  confirm.rs  conflict.rs  content_search.rs  db_filter.rs  directory_picker.rs  directory_switcher.rs  editable_select.rs  file_search.rs  find_bar.rs  info.rs  info_action.rs  input.rs  input_keys.rs  lib.rs  overwrite.rs  progress.rs  rename_pattern.rs  replace.rs  save_as.rs  script_create.rs  search.rs  select.rs  sessions.rs  settings.rs  tree_search.rs
crates/modal/src/settings/: fields.rs  kb.rs
crates/panel-binary/: Cargo.toml
crates/panel-binary/src/: lib.rs
crates/panel-db/: Cargo.toml
crates/panel-db/src/: actions.rs  dropdown.rs  lib.rs  render.rs
crates/panel-diagnostics/: Cargo.toml
crates/panel-diagnostics/src/: lib.rs
crates/panel-editor/: Cargo.toml
crates/panel-editor/src/: auto_pairs.rs  clipboard.rs  code_action_popup.rs  completion_popup.rs  config.rs  constants.rs  core.rs  core_tests.rs  editor_file_io.rs  editor_git.rs  editor_lsp.rs  editor_mouse.rs  editor_movement.rs  editor_panel.rs  editor_rendering.rs  editor_search.rs  editor_text.rs  editor_viewport.rs  git.rs  keyboard.rs  lib.rs  remote.rs  search.rs  selection.rs  syntax_picker.rs  text_editing.rs  word_boundary.rs  word_wrap.rs
crates/panel-editor/src/cursor/: jump.rs  physical.rs  visual.rs
crates/panel-editor/src/rendering/: context.rs  cursor_renderer.rs  deletion_markers.rs  highlight_renderer.rs  inline_diff.rs  line_rendering.rs  mod.rs  wrap_rendering.rs
crates/panel-editor/src/state/: file_state.rs  git_integration.rs  input_state.rs  lsp_state.rs  mod.rs  rendering_cache.rs
crates/panel-editor/src/vim/: key_handler.rs  mod.rs  mode.rs  motions.rs  operators.rs  state.rs
crates/panel-editor/tests/: php_highlight_flow.rs
crates/panel-file-manager/: Cargo.toml
crates/panel-file-manager/src/: file_info.rs  file_search.rs  git_status.rs  keyboard.rs  lib.rs  navigation.rs  operations.rs  rendering.rs  selection.rs  tree.rs  utils.rs  vfs_state.rs
crates/panel-git-diff/: Cargo.toml
crates/panel-git-diff/src/: lib.rs
crates/panel-git-log/: Cargo.toml
crates/panel-git-log/src/: lib.rs
crates/panel-git-status/: Cargo.toml
crates/panel-git-status/src/: actions.rs  lib.rs  rendering.rs  tree.rs  types.rs
crates/panel-html/: Cargo.toml
crates/panel-html/src/: lib.rs
crates/panel-image/: Cargo.toml
crates/panel-image/src/: lib.rs
crates/panel-markdown/: Cargo.toml
crates/panel-markdown/src/: lib.rs  render.rs
crates/panel-mermaid/: Cargo.toml
crates/panel-mermaid/src/: lib.rs
crates/panel-misc/: Cargo.toml
crates/panel-misc/help/: de.txt  en.txt  es.txt  fr.txt  hi.txt  pt.txt  ru.txt  th.txt  zh.txt
crates/panel-misc/src/: help.rs  help_generator.rs  lib.rs  references.rs  welcome.rs
crates/panel-misc/src/journal/: highlighting.rs  mod.rs
crates/panel-misc/src/log_viewer/: highlighting.rs
crates/panel-outline/: Cargo.toml
crates/panel-outline/src/: lib.rs  regex_fallback.rs  symbols.rs  treesitter.rs
crates/panel-terminal/: Cargo.toml
crates/panel-terminal/src/: clipboard.rs  disk_space.rs  lib.rs  link_detection.rs  shell_utils.rs  terminal_info.rs
crates/panel-terminal/src/terminal/: csi_handlers.rs  mod.rs  vt100_parser.rs
crates/richtext/: Cargo.toml
crates/richtext/src/: lib.rs
crates/state/: Cargo.toml
crates/state/src/: batch.rs  layout.rs  lib.rs  operations.rs  pending_action.rs  ui.rs
crates/system-monitor/: Cargo.toml
crates/system-monitor/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui-render/: Cargo.toml
crates/ui-render/src/: dropdown.rs  inline_selector.rs  language_dropdown.rs  lib.rs  menu.rs  panel_rendering.rs  scroll_indicator.rs  simple_dropdown.rs  status_bar.rs  theme_dropdown.rs
crates/ui/src/: grapheme_utils.rs  lib.rs  path_utils.rs  suggestion_input.rs  textarea.rs
crates/unicode-width-fix/: Cargo.toml
crates/unicode-width-fix/src/: tables.rs
(+199 files in other folders)
