[package]
name = "termide-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration management for termide"

[dependencies]
serde.workspace = true
anyhow.workspace = true
toml.workspace = true
dirs.workspace = true
crossterm.workspace = true
chrono.workspace = true
log.workspace = true
termide-keyboard = { path = "../keyboard" }

[dev-dependencies]
tempfile = "3.12"
