[package]
name = "termide-git"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Git integration for termide"

[dependencies]
anyhow.workspace = true
log.workspace = true
regex.workspace = true
similar.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true

# Workspace crates
termide-ui = { path = "../ui" }
