[package]
name = "termide-layout"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Panel layout management for termide"
publish = false

[dependencies]
termide-core = { path = "../core" }
termide-config = { path = "../config" }
anyhow.workspace = true
