[package]
name = "termide-modal"
version.workspace = true
edition = "2021"
description = "Modal dialog system for termide"
license = "MIT"

[dependencies]
# External
anyhow.workspace = true
crossterm.workspace = true
glob.workspace = true
ignore.workspace = true
ratatui.workspace = true
regex.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true

# Workspace crates
termide-git = { path = "../git" }
termide-ui = { path = "../ui" }
termide-theme = { path = "../theme" }
termide-i18n = { path = "../i18n" }
termide-config = { path = "../config" }
termide-state = { path = "../state" }
