[package]
name = "termide-panel-binary"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true

# Workspace crates
termide-config = { path = "../config" }
termide-core = { path = "../core" }
