[package]
name = "termide-panel-diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crossterm.workspace = true
ratatui.workspace = true
unicode-width.workspace = true

# Workspace crates
lsp-types = "0.97"
termide-clipboard = { path = "../clipboard" }
termide-config = { path = "../config" }
termide-core = { path = "../core" }
termide-i18n = { path = "../i18n" }
termide-theme = { path = "../theme" }
termide-ui = { path = "../ui" }
