[package]
name = "termide-panel-editor"
version.workspace = true
edition = "2021"
description = "Text editor panel for termide"
license = "MIT"

[dependencies]
# External
anyhow.workspace = true
chrono.workspace = true
crossterm.workspace = true
log.workspace = true
ratatui.workspace = true
ropey.workspace = true
unicode-width.workspace = true
unicode-segmentation.workspace = true
dirs.workspace = true

# Workspace crates
termide-buffer = { path = "../buffer" }
termide-config = { path = "../config" }
termide-core = { path = "../core" }
termide-git = { path = "../git" }
termide-highlight = { path = "../highlight" }
termide-i18n = { path = "../i18n" }
termide-modal = { path = "../modal" }
termide-session = { path = "../session" }
termide-state = { path = "../state" }
termide-theme = { path = "../theme" }
termide-clipboard = { path = "../clipboard" }

[dev-dependencies]
tempfile.workspace = true
