[package]
name = "termide-panel-editor"
version.workspace = true
edition = "2021"
description = "Text editor panel for termide"
license = "MIT"

[dependencies]
# External
anyhow.workspace = true
chrono.workspace = true
crossterm.workspace = true
log.workspace = true
lsp-types = "0.97"
ratatui.workspace = true
ropey.workspace = true
unicode-width.workspace = true
unicode-segmentation.workspace = true
dirs.workspace = true

# Workspace crates
termide-buffer = { path = "../buffer" }
termide-vfs = { path = "../vfs" }
termide-clipboard = { path = "../clipboard" }
termide-config = { path = "../config" }
termide-core = { path = "../core" }
termide-git = { path = "../git" }
termide-highlight = { path = "../highlight" }
termide-i18n = { path = "../i18n" }
termide-lsp = { path = "../lsp" }
termide-modal = { path = "../modal" }
termide-session = { path = "../session" }
termide-state = { path = "../state" }
termide-system-monitor = { path = "../system-monitor" }
termide-theme = { path = "../theme" }
termide-ui = { path = "../ui" }

[dev-dependencies]
tempfile.workspace = true
