[package]
name = "termide-panel-file-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
crossterm.workspace = true
dirs.workspace = true
libc.workspace = true
log.workspace = true
ratatui.workspace = true
unicode-width.workspace = true

# Workspace crates
termide-config = { path = "../config" }
termide-logger = { path = "../logger" }
termide-vfs = { path = "../vfs" }
termide-system-monitor = { path = "../system-monitor" }
termide-core = { path = "../core" }
termide-git = { path = "../git" }
termide-highlight = { path = "../highlight" }
termide-i18n = { path = "../i18n" }
termide-keyboard = { path = "../keyboard" }
termide-modal = { path = "../modal" }
termide-state = { path = "../state" }
termide-theme = { path = "../theme" }
termide-ui = { path = "../ui" }
termide-watcher = { path = "../watcher" }

[dev-dependencies]
tempfile.workspace = true
