[package]
name = "termide-panel-git-diff"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
unicode-width.workspace = true
regex.workspace = true

# Workspace crates
termide-clipboard = { path = "../clipboard" }
termide-config = { path = "../config" }
termide-core = { path = "../core" }
termide-git = { path = "../git" }
termide-i18n = { path = "../i18n" }
termide-session = { path = "../session" }
termide-theme = { path = "../theme" }
termide-ui = { path = "../ui" }
