[package]
name = "termide-panel-git-log"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
unicode-width.workspace = true

# Workspace crates
termide-config = { path = "../config" }
termide-core = { path = "../core" }
termide-git = { path = "../git" }
termide-session = { path = "../session" }
termide-theme = { path = "../theme" }
