[package]
name = "termide-panel-git-log"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
unicode-width.workspace = true

# Workspace crates
termide-config = { path = "../config" }
termide-core = { path = "../core" }
termide-git = { path = "../git" }
termide-i18n = { path = "../i18n" }
termide-modal = { path = "../modal" }
termide-session = { path = "../session" }
termide-state = { path = "../state" }
termide-theme = { path = "../theme" }
termide-ui = { path = "../ui" }
termide-clipboard = { path = "../clipboard" }
termide-ui-render = { path = "../ui-render" }
