[package]
name = "termide-panel-html"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
unicode-width.workspace = true
url.workspace = true

# Workspace crates
termide-core = { path = "../core" }
termide-html = { path = "../html" }
termide-richtext = { path = "../richtext" }
termide-modal = { path = "../modal" }
termide-ui = { path = "../ui" }
