[package]
name = "termide-panel-image"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true

# Graphics support
ratatui-image = { version = "5", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

# Workspace crates
termide-core = { path = "../core" }
