[package]
name = "termide-panel-markdown"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
pulldown-cmark.workspace = true
unicode-width.workspace = true

# Workspace crates
termide-core = { path = "../core" }
termide-highlight = { path = "../highlight" }
termide-mermaid = { path = "../mermaid" }
termide-modal = { path = "../modal" }
termide-ui = { path = "../ui" }
