[package]
name = "termide-panel-mermaid"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
unicode-width.workspace = true

# Workspace crates
termide-core = { path = "../core" }
termide-mermaid = { path = "../mermaid" }
termide-ui = { path = "../ui" }
