[package]
name = "termide-panel-outline"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crossterm.workspace = true
ratatui.workspace = true
unicode-width.workspace = true
tree-sitter.workspace = true
streaming-iterator = "0.1"
regex.workspace = true
log = "0.4"

# Grammar parsers
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
# Must match termide-highlight's tree-sitter-php (0.23): two versions in one
# binary collide the `tree_sitter_php` C symbol and break PHP highlighting.
tree-sitter-php = "0.23"
tree-sitter-haskell = "0.23"
tree-sitter-nix = "0.3"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-md = "0.3"

termide-clipboard = { path = "../clipboard" }
termide-config = { path = "../config" }
termide-core = { path = "../core" }
termide-highlight = { path = "../highlight" }
termide-i18n = { path = "../i18n" }
termide-theme = { path = "../theme" }
termide-ui = { path = "../ui" }
