[package]
name = "termide-panel-terminal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
crossterm.workspace = true
libc.workspace = true
log.workspace = true
nix = { version = "0.29", features = ["signal", "process"] }
open = "5"
portable-pty.workspace = true
ratatui.workspace = true
regex.workspace = true
vte.workspace = true

# Workspace crates
termide-config = { path = "../config" }
termide-core = { path = "../core" }
termide-i18n = { path = "../i18n" }
termide-keyboard = { path = "../keyboard" }
termide-modal = { path = "../modal" }
termide-state = { path = "../state" }
termide-theme = { path = "../theme" }
termide-ui = { path = "../ui" }
