[package]
name = "termide-richtext"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Parser-agnostic rich-text layout engine for termide (styled runs to wrapped ratatui lines)"

[dependencies]
ratatui.workspace = true
unicode-width.workspace = true

# Workspace crates
termide-core = { path = "../core" }
termide-highlight = { path = "../highlight" }
termide-mermaid = { path = "../mermaid" }
