[package]
name = "termide-system-monitor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "System resource monitoring for termide"

[dependencies]
sysinfo.workspace = true
termide-i18n = { path = "../i18n" }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
