[package]
name = "unicode-width"
version = "0.2.2"
edition = "2021"
# Mirrors upstream `unicode-width` so cargo-deny picks up a license
# expression — the patch replaces that crate in the workspace.
license = "MIT OR Apache-2.0"

[features]
cjk = []
default = ["cjk"]
no_std = []

[lib]
name = "unicode_width"
path = "src/lib.rs"
